[package]
name = "ctr-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git", version = "0.7.1" }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
